buildscript {
    repositories {
        jcenter()
    }
    dependencies {
        classpath "io.qameta.allure:allure-gradle:2.8.1"
    }
}

apply plugin: 'java'
apply plugin: 'io.qameta.allure'
apply plugin: 'idea'

group rootProject.name
version '1.0-SNAPSHOT'

sourceCompatibility = 1.8
targetCompatibility = 1.8

repositories {
    mavenCentral()
}

clean.doFirst {
    delete "${rootDir}/out"
    delete "${rootDir}/build"
}

dependencies {
    implementation('io.qameta.allure:allure-okhttp3:2.10.0')
    compile("io.github.bonigarcia:webdrivermanager:3.7.1")
    compile group: 'com.codeborne', name: 'selenide', version: '5.6.1'
    compile group: 'org.seleniumhq.selenium', name: 'selenium-java', version: '3.141.59'
    compile group: 'org.seleniumhq.selenium', name: 'selenium-api', version: '3.141.59'
    compile group: 'org.seleniumhq.selenium', name: 'selenium-server', version: '3.141.59'
    compile group: 'net.lightbody.bmp', name: 'browsermob-core', version: '2.1.5'
    compile group: 'com.browserstack', name: 'browserstack-local-java', version: '1.0.3'
    compile group: 'org.testng', name: 'testng', version: '6.14.3'
    compile group: 'javax.mail', name: 'javax.mail-api', version: '1.6.0'
    compile group: 'javax.xml.bind', name: 'jaxb-api', version: '2.2.11'
    compile group: 'com.sun.mail', name: 'smtp', version: '1.6.0'
    compile group: 'com.sun.mail', name: 'javax.mail', version: '1.6.0'
    compile group: 'org.apache.poi', name: 'poi', version: '4.0.0'
    compile group: 'org.apache.poi', name: 'poi-ooxml', version: '4.0.0'
    compile group: 'com.fasterxml.jackson.core', name: 'jackson-core', version: '2.10.2'
    compile group: 'com.fasterxml.jackson.core', name: 'jackson-databind', version: '2.10.2'
    compile group: 'com.googlecode.json-simple', name: 'json-simple', version: '1.1.1'
    compile(group: 'com.shekhargulati.urlcleaner', name: 'urlcleaner', version: '0.4.0', ext: 'jar')
    compile group: 'org.assertj', name: 'assertj-core', version: '3.12.2'
    compile group: 'org.aspectj', name: 'aspectjweaver', version: '1.9.5'
    compile('io.qameta.allure:allure-junit4:2.10.0')
    compile group: 'io.qameta.allure', name: 'allure-java-commons', version: '2.13.1'
    compile group: 'io.qameta.allure', name: 'allure-testng', version: '2.13.1'
    compile group: 'io.qameta.allure', name: 'allure-selenide', version: '2.13.1'
    compile('org.apache.logging.log4j:log4j-slf4j-impl:2.11.1')
    compile group: 'org.apache.logging.log4j', name: 'log4j-api', version: '2.11.1'
    compile group: 'org.apache.logging.log4j', name: 'log4j-core', version: '2.11.1'
    compile group: 'org.awaitility', name: 'awaitility', version: '3.1.6'
    compile 'io.rest-assured:rest-assured:3.1.1'
    testCompile group: 'junit', name: 'junit', version: '4.12'
    testCompile group: 'org.slf4j', name: 'slf4j-simple', version: '1.7.25'
    testCompile group: 'org.slf4j', name: 'slf4j-log4j12', version: '1.7.25'

}

allure {
    version = '2.9.0'
    autoconfigure = true
    aspectjweaver = true
    allureJavaVersion = '2.0-BETA10'
    downloadLinkFormat = 'https://repo.maven.apache.org/maven2/io/qameta/allure/allure-commandline/%s/allure-commandline-%<s.zip'
}

def example = project.hasProperty("example")
test {
    useTestNG() {
        preserveOrder = true
        if (example)
            suites "src/test/java/suits/suitee.xml"
    }
    systemProperty "browser", System.getProperty("browser")
    systemProperty "browser_version", System.getProperty("browser_version")
    systemProperty "selenoid.url", System.getProperty("selenoid.url")
    systemProperty "env", System.getProperty("env")
    systemProperty "retry", System.getProperty("retry")
    systemProperty "urltest", System.getProperty("urltest")
    systemProperty "urlstg", System.getProperty("urlstg")
    systemProperty "email.address", System.getProperty("email.address")
    systemProperty "email.password", System.getProperty("email.password")
    systemProperty "user.email.admin", System.getProperty("user.email.admin")
    systemProperty "user.password.admin", System.getProperty("user.password.admin")
    systemProperty "user.email.member", System.getProperty("user.email.member")
    systemProperty "user.password.member", System.getProperty("user.password.member")
    maxParallelForks = 1
}

